CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2007 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$


2007.November.27 (0.9.19)
  * Localization Updates:
    ---------------------
    * Danish translation
      Joe Hansen <joedalton2@yahoo.dk>


2007.November.17 (0.9.18)
  * Interface Improvements:
    -----------------------
    * Improved 'New' and 'Open' interface:
      + 'Open' dialog no longer includes 'Starter' images
      + 'New' now brings up a selection dialog showing 'Starter' images
        and color choices
      + New images can be given solid background colors
        (which the 'Eraser' tool erases to)

    * Sped up prompt animations, and made them 'fly' from their sources
      (e.g., quit confirmation flies from Quit button), when possible.

    * Center image of directional brushes shown.
      (SourceForge.net Bug #1658697)

    * Windows shows printer configuration dialog even when in fullscreen mode.
      If no 'print.cfg' file is found, the dialog is shown.
      Clicking "Cancel" in the printer config. dialog cancels Tux Paint's
      print attempt.
      John Popplewell <john@johnnypops.demon.co.uk>

  * Tool Improvements:
    ------------------
    * Added a 'color picker' entry to the color palette; allows choosing
      from over 50,000 colors.  Used by drawing and Magic tools, as well
      as the new 'New' dialog.

    * Added an Octagon shape to the 'Shapes' tool.

    * Stamps can now be pre-flipped and/or pre-mirrored-and-flipped now
      (in addition to pre-mirrored).
      Use "_flip.png"/"_flip.svg" and "_mirror_flip.png"/"_mirror_flip.png",
      respectively.

    * Any current text being written in the Text tool is applied to the
      picture if 'Print' is clicked.
      (Useful if kids are told to add their name to a picture when they're
      done, right before printing, but they forget to hit [Enter].)
